добавил jpa, logback, lombok, .gitignore

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,15 @@
 spring:
   codec:
     max-in-memory-size: 10MB
+  datasource:
+    url: jdbc:postgresql://localhost:5432/rpg
+    hikari:
+      connection-timeout: 20000
+      maximum-pool-size: 10
+    username: rpg
+    password: rpg
+  jpa:
+    hibernate:
+      ddl-auto: create
 
 upload-dir: /usr/share/nginx/html/images
